Fixed view on firefox

--- a/styles/home.css
+++ b/styles/home.css
@@ -1,7 +1,3 @@
-body, html {
-	height: 80%;
-}
-
 iframe {
 	width: 100%;
 	height: 99%;
@@ -13,7 +9,6 @@ iframe {
 	display: grid;
 	margin: auto;
 	width: 66%;
-	height: 100%;
 	position: relative;
 	grid-template-columns: 33% 67%;
 	grid-template-rows: auto;
@@ -21,11 +16,10 @@ iframe {
 }
 
 .dir {
-	display: grid;
 	align-items: start;
 	border-right: solid 2px #00FF00;
 	border-left: solid 2px #00FF00;
-	grid-template-rows: repeat(auto-fit, minmax(0px, 1em));
+	height: auto;
 	grid-column-start: 1;
 	grid-column-end: 1;
 	grid-auto-flow: row;
@@ -44,10 +38,12 @@ iframe {
 	align-self: start;
 	padding-left: 2px;
 	padding-right: 2px;
+	max-height: 1.5em;
 	overflow: hidden;
 }
 
 .ident {
+	float: right;
 	grid-column-start: 2;
 	grid-column-end: 2;
 	align-self: start;
@@ -55,6 +51,7 @@ iframe {
 	padding-left: 2px;
 	padding-right: 2px;
 	border-left: dashed 2px #00FF00;
+	width: auto;
 	white-space: pre;
 }
 
@@ -67,10 +64,10 @@ iframe {
 }
 
 .filler {
-	position:absolute;
-	display: flex;
-  	align-items: stretch;
-	height: 100%;
+	display: inline-grid;
+	border-color: #00FF00;
+	padding-left: 2px;
+	width: 100%;
 }
 
 .path {
@@ -84,10 +81,10 @@ iframe {
 }
 
 .row {
-	grid-column-start: 1;
-	grid-column-end: 3;
 	display: inline-grid;
 	border-color: #00FF00;
+	padding-left: 2px;
+	width:100%;
 	cursor: pointer;
 }
 
@@ -99,6 +96,7 @@ iframe {
 
 .window {
 	width: 90%;
-    height: auto;
+	display: block;
+    max-height: 100%;
     margin: auto;
 }
